2006-10-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc: build_sql_select_with_where_clause(): 
	Define the first-level relationship (via a LEFT OUTER JOIN) of 
	a related relationship, even if no fields from the intermediate 
	relationship are shown, to avoid a SQL error and subsequent 
	crash.

1.1.4:

2006-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/sharedptr.h: cast_*(): Make the new sharedptr 
	share the refcount with the original, avoiding early deletions of 
	the object that they share. That was stupid of me.
	* glom/libglom/test_sharedptr_layoutitem.cc: More testing.

2006-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am:
	* glom/libglom/test_sharedptr_layoutitem.cc: Added test.

2006-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc: add_column(): Do an extra, 
	probably unnecessary, check for a null field before dereferencing it.
	construct_specified_columns(): Do not clone the field - just use it.
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	get_data_layout_groups_plus_new_fields(): When building a default 
	layout, because no layout is defined, store that layout in the 
	document (saving it to disk when in developer mode). This fixes a 
	dereference of a deleted field, though that should not be necessary 
	so I suspect a fundamental sharedptr problem. But luckily, this 
	is the correct thing to do anyway, for efficiency, and so that 
	layout data is preserved.

2006-10-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: get_table_fields_to_show_for_sequence_add_group(), 
	Do not clone the layout items - just supply the originals, so that 
	we can store some data in them and have that data preserved for next 
	time. This should also be more efficient because it does less 
	object copying and therefore less memory copying.
	* glom/libglom/data_structure/layout/layoutitem_field.cc: